gitops/k8s-manifests/server2/emqx/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  namespace: iot
  labels:
    app.kubernetes.io/name: emqx
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: iot
  annotations:
    argocd.argoproj.io/sync-wave: "100"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - mqtt.server2.homelab.irha.cz
  rules:
    - backendRefs:
        - name: emqx
          namespace: iot
          port: 18083
